--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -49,7 +49,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #343a40;
   text-align: left;
   background-color: #fff; }
 
@@ -1140,7 +1140,7 @@ pre {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #212529; }
+  color: #343a40; }
   .table th,
   .table td {
     padding: 0.75rem;
@@ -1175,7 +1175,7 @@ pre {
   background-color: rgba(0, 0, 0, 0.05); }
 
 .table-hover tbody tr:hover {
-  color: #212529;
+  color: #343a40;
   background-color: rgba(0, 0, 0, 0.075); }
 
 .table-primary,
@@ -1471,7 +1471,7 @@ select.form-control:focus::-ms-value {
   margin-bottom: 0;
   font-size: 1rem;
   line-height: 1.5;
-  color: #212529;
+  color: #343a40;
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0; }
@@ -1751,7 +1751,7 @@ textarea.form-control {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #212529;
+  color: #343a40;
   text-align: center;
   vertical-align: middle;
   user-select: none;
@@ -1766,7 +1766,7 @@ textarea.form-control {
     .btn {
       transition: none; } }
   .btn:hover {
-    color: #212529;
+    color: #343a40;
     text-decoration: none; }
   .btn:focus, .btn.focus {
     outline: 0;
@@ -2243,7 +2243,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 1rem;
-  color: #212529;
+  color: #343a40;
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -3845,7 +3845,7 @@ input[type="button"].btn-block {
     text-decoration: none;
     background-color: #f8f9fa; }
   .list-group-item-action:active {
-    color: #212529;
+    color: #343a40;
     background-color: #ecf0f1; }
 
 .list-group-item {
@@ -4470,7 +4470,7 @@ a.close.disabled {
 
 .popover-body {
   padding: 0.5rem 0.75rem;
-  color: #212529; }
+  color: #343a40; }
 
 .carousel {
   position: relative; }
@@ -7065,7 +7065,7 @@ a.text-dark:hover, a.text-dark:focus {
   color: #576263 !important; }
 
 .text-body {
-  color: #212529 !important; }
+  color: #343a40 !important; }
 
 .text-muted {
   color: #95a5a6 !important; }
@@ -7290,7 +7290,7 @@ a.text-dark:hover, a.text-dark:focus {
   .alert-light,
   .alert-light a,
   .alert-light .alert-link {
-    color: #212529; }
+    color: #343a40; }
 
 .modal .close {
   color: #000; }
