--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4689,12 +4689,12 @@ button.bg-primary:focus {
   background-color: #1a252f !important; }
 
 .bg-secondary {
-  background-color: #95a5a6 !important; }
+  background-color: #374e65 !important; }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
 button.bg-secondary:hover,
 button.bg-secondary:focus {
-  background-color: #798d8f !important; }
+  background-color: #304457 !important; }
 
 .bg-success {
   background-color: #18BC9C !important; }
